# DocScanTest

./: logErrors.txt  mylogs.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ch/abacus/test/docscantest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DocScanner.cpp  native-lib.cpp
app/src/main/cpp/common/features/: Contour.cpp  Contour.hpp  Element.cpp  Element.hpp  Group.cpp  Group.hpp  Line.cpp  Line.hpp  Page.cpp  Page.hpp  Para.cpp  Para.hpp
app/src/main/cpp/common/homography/: LWHomographyExtractor.cpp  LWHomographyExtractor.hpp
app/src/main/cpp/common/parser/: Receipt.cpp  Receipt.hpp
app/src/main/java/ch/abacus/test/docscantest/: DocScannerHelper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ch/abacus/test/docscantest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
